# PackerDetectionToolEvaluation

./: README.md  change_dataset_labels.py  die_packer_scan.py  die_packer_scan_statistics.py  mislabeled_samples.json  peid_packer_scan.py  peid_packer_scan_statistics.py  pyproject.toml  rce_label_convert.json  util.py
result/die/PackingData/: Notpacked.json  PackingData.json
result/die/RCE_Lab/: UnpackMe (.NET).json  UnpackMe (FoxPro).json  UnpackMe (PE32bit).json  UnpackMe (PE64bit).json  Unpackme Themida 1.9.1.0.json
result/pypeid/PackingData/: Notpacked.json  PackingData.json
result/pypeid/RCE_Lab/: UnpackMe (.NET).json  UnpackMe (FoxPro).json  UnpackMe (PE32bit).json  UnpackMe (PE64bit).json  Unpackme Themida 1.9.1.0.json
