[tool.poetry]
name = "packerdetectiontoolevaluation"
version = "0.1.0"
description = "Evaluation of packer type estimation/detection tools"
authors = ["Tsubasa Kuwabara"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pypeid = {git = "https://github.com/FFRI/pypeid.git", branch = "master" }
rarfile = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
